@@ -171,7 +171,7 @@ public class EntityEventHandler implements Listener
         // Prevent breaking lily pads via collision with a boat.
         else if (event.getEntity() instanceof Vehicle && !event.getEntity().getPassengers().isEmpty())
         {
-            Entity driver = event.getEntity().getPassengers().get(0);
+            Entity driver = event.getEntity().getPassengers().getFirst();
             if (driver instanceof Player player)
             {
                 Block block = event.getBlock();
@@ -203,7 +203,7 @@ public class EntityEventHandler implements Listener
 
         List<MetadataValue> values = fallingBlock.getMetadata("GP_FALLINGBLOCK");
         //if we're not sure where this entity came from (maybe another plugin didn't follow the standard?), allow the block to form
-        if (values.isEmpty() || !(values.get(0).value() instanceof Location originalLocation)) return;
+        if (values.isEmpty() || !(values.getFirst().value() instanceof Location originalLocation)) return;
 
         // If it fell straight down, allow.
         if (Objects.equals(originalLocation.getWorld(), block.getWorld())
@@ -672,7 +672,7 @@ public class EntityEventHandler implements Listener
     {
         Item item = event.getEntity();
         List<MetadataValue> data = item.getMetadata("GP_ITEMOWNER");
-        event.setCancelled(data != null && data.size() > 0);
+        event.setCancelled(!data.isEmpty());
     }
 
     //when an entity picks up an item
@@ -713,13 +713,11 @@ public class EntityEventHandler implements Listener
         }
 
         //only allow players to break paintings, not anything else (like water and explosions)
-        if (!(event instanceof HangingBreakByEntityEvent))
+        if (!(event instanceof HangingBreakByEntityEvent entityEvent))
         {
             event.setCancelled(true);
             return;
         }
-
-        HangingBreakByEntityEvent entityEvent = (HangingBreakByEntityEvent) event;
 
         //who is removing it?
         Entity remover = entityEvent.getRemover();
@@ -805,7 +803,7 @@ public class EntityEventHandler implements Listener
         List<MetadataValue> data = item.getMetadata("GP_ITEMOWNER");
 
         // Ignore absent or invalid data.
-        if (data.isEmpty() || !(data.get(0).value() instanceof UUID ownerID)) return;
+        if (data.isEmpty() || !(data.getFirst().value() instanceof UUID ownerID)) return;
 
         // Get owner from stored UUID.
         OfflinePlayer owner = instance.getServer().getOfflinePlayer(ownerID);
