@@ -557,10 +557,7 @@ class PlayerEventHandler implements Listener
     static void makeSocialLogEntry(String name, String message)
     {
         StringBuilder entryBuilder = new StringBuilder(name);
-        for (int i = name.length(); i < longestNameLength; i++)
-        {
-            entryBuilder.append(' ');
-        }
+        entryBuilder.append(" ".repeat(Math.max(0, longestNameLength - name.length())));
         entryBuilder.append(": ").append(message);
 
         longestNameLength = Math.max(longestNameLength, name.length());
@@ -777,8 +774,8 @@ class PlayerEventHandler implements Listener
                 {
                     if (player.getPortalCooldown() > 8 && player.hasMetadata("GP_PORTALRESCUE"))
                     {
-                        GriefPrevention.AddLogEntry("Rescued " + player.getName() + " from a nether portal.\nTeleported from " + player.getLocation().toString() + " to " + ((Location) player.getMetadata("GP_PORTALRESCUE").get(0).value()).toString(), CustomLogEntryTypes.Debug);
-                        player.teleport((Location) player.getMetadata("GP_PORTALRESCUE").get(0).value());
+                        GriefPrevention.AddLogEntry("Rescued " + player.getName() + " from a nether portal.\nTeleported from " + GriefPrevention.getfriendlyLocationString(player.getLocation()) + " to " + GriefPrevention.getfriendlyLocationString((Location) player.getMetadata("GP_PORTALRESCUE").getFirst().value()), CustomLogEntryTypes.Debug);
+                        player.teleport((Location) player.getMetadata("GP_PORTALRESCUE").getFirst().value());
                         player.removeMetadata("GP_PORTALRESCUE", instance);
                     }
                 }
@@ -1116,9 +1113,8 @@ class PlayerEventHandler implements Listener
             {
                 //ensure this entity can be tamed by players
                 tameable.setOwner(null);
-                if (tameable instanceof InventoryHolder)
+                if (tameable instanceof InventoryHolder holder)
                 {
-                    InventoryHolder holder = (InventoryHolder) tameable;
                     holder.getInventory().clear();
                 }
             }
@@ -1220,7 +1216,7 @@ class PlayerEventHandler implements Listener
             //don't track in worlds where claims are not enabled
             if (!instance.claimsEnabledForWorld(entity.getWorld())) return;
 
-            Claim cachedClaim = playerData.lastClaim;;
+            Claim cachedClaim = playerData.lastClaim;
             Claim claim = this.dataStore.getClaimAt(entity.getLocation(), false, cachedClaim);
 
             // Require a claim to handle.
@@ -2230,8 +2226,7 @@ class PlayerEventHandler implements Listener
         Boolean cachedValue = this.inventoryHolderCache.get(cacheKey);
         if (cachedValue != null)
         {
-            return cachedValue.booleanValue();
-
+            return cachedValue;
         }
         else
         {
@@ -2244,16 +2239,11 @@ class PlayerEventHandler implements Listener
     private boolean onLeftClickWatchList(Material material)
     {
         if (Tag.BUTTONS.isTagged(material)) return true;
-        switch (material)
+        return switch (material)
         {
-            case LEVER:
-            case REPEATER:
-            case CAKE:
-            case DRAGON_EGG:
-                return true;
-            default:
-                return false;
-        }
+            case LEVER, REPEATER, CAKE, DRAGON_EGG -> true;
+            default -> false;
+        };
     }
 
     static Block getTargetBlock(Player player, int maxDistance) throws IllegalStateException
